<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/mainColor"
    tools:context="wiadevelopers.com.antireport.RepairReportActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/repairReport1"
            android:textSize="@dimen/contentTextSize"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <ImageView
            android:layout_marginTop="16dp"
            android:src="@drawable/img1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/repairReport2"
            android:textSize="@dimen/contentTextSize"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginTop="16dp"
            android:src="@drawable/img2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/repairReport3"
            android:textSize="@dimen/contentTextSize"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginTop="16dp"
            android:src="@drawable/img3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/repairReport4"
            android:textSize="@dimen/contentTextSize"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginTop="16dp"
            android:src="@drawable/img4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/repairReport5"
            android:textSize="@dimen/contentTextSize"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginTop="16dp"
            android:src="@drawable/img5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/repairReport6"
            android:textSize="@dimen/contentTextSize"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
